tests/baselines/reference/superCallBeforeThisAccessing3.errors.txt
tests/cases/conformance/es6/classDeclaration/superCallBeforeThisAccessing3.ts(9,9): error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
tests/cases/conformance/es6/classDeclaration/superCallBeforeThisAccessing3.ts(10,9): error TS2684: The 'this' context of type 'void' is not assignable to method's 'this' of type 'Base'.


==== tests/cases/conformance/es6/classDeclaration/superCallBeforeThisAccessing3.ts (2 errors) ====
    class Base {
        constructor(c) { }
    }
    class D extends Base {
        private _t;
        constructor() {
            let x = () => { this._t };
            x();  // no error; we only check super is called before this when the container is a constructor
            this._t;  // error
            ~~~~
!!! error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
            super(undefined);
            ~~~~~~~~~~~~~~~~
!!! error TS2684: The 'this' context of type 'void' is not assignable to method's 'this' of type 'Base'.
        }
    }
    